--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -16,6 +16,9 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
     padding: 0.2em 0;
 }
 
+.help-block {
+  color: darken($text-color, 25%); // lighten the text some for contrast
+}
 // Component styles are injected through grunt
 // injector
 @import 'account/login/login.scss';
