--- a/client/app/projects/all/all-projects.scss
+++ b/client/app/projects/all/all-projects.scss
@@ -5,3 +5,16 @@
     text-decoration: none;
   }
 }
+
+.all-projects {
+  div.list-group-item {
+    height: 100%;
+  }
+
+  .project-icon {
+    margin: 30px;
+    font-size: 100px;
+  }
+
+}
+
