--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -26,9 +26,6 @@
                       <li ng-show="isLoggedIn()">
                         <a ng-href="/create">Create a project</a>
                       </li>
-                      <li ng-show="hasSubmitted()">
-                        <a ng-href="/submitted">Edit a submission</a>
-                      </li>
                     </ul>
 
                 </li>
@@ -38,7 +35,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/signup')}"><a href="/signup">Sign up</a></li>
                 <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/login')}"><a href="/login">Login</a></li>
-                <li ng-show="isLoggedIn()"><p class="navbar-text">Hello {{ getCurrentUser().name }}</p></li>
+                <li ng-show="isLoggedIn()"><p class="navbar-text">Hello, {{ getCurrentUser().name }}</p></li>
                 <li ng-show="isLoggedIn()" ng-class="{active: isActive('/settings')}"><a href="/settings"><i
                         class="fa fa-cog"></i></a></li>
                 <li ng-show="isLoggedIn()" ng-class="{active: isActive('/logout')}"><a href="" ng-click="logout()">Logout</a>
